[package]
name = "paf2chain"
version = "0.1.0"
authors = ["Andrea Guarracino"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
boomphf = "0.5.5"
itertools = "0.10.0"
fnv = "1.0.7"
rgb = "0.8"
line_drawing = "0.8.0"
